<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroAtividadeActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_nome_atividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_titulo"
            android:inputType="textShortMessage"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/edit_data_atividade"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:focusable="false"
                />

            <Button
                android:id="@+id/btn_data_inicio_atividade"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_my_events"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/edit_hora_atividade"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hora_de_in_cio"
                android:focusable="false"
                />
            <Button
                android:id="@+id/btn_hora_inicio_atividade"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clock"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>



        <EditText
            android:id="@+id/edit_descricao_atividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descri_o"
            android:inputType="textShortMessage"
            />


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo da atividade"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_atividade_palestra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/palestra"/>
            </RadioGroup>

            <RadioButton
                android:id="@+id/radio_atividade_minicurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minicurso"/>

            <RadioButton
                android:id="@+id/radio_atividade_mesa_redonda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mesa_redonda"/>


        </LinearLayout>



        <EditText
            android:id="@+id/edit_valor_atividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor"
            android:inputType="numberDecimal"

            />

        <EditText
            android:id="@+id/edit_responsavel_atividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respons_vel"
            android:inputType="textShortMessage"
            />

        <Button
            android:id="@+id/btn_salvar_atividade"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>