<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CadastroEventosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_nome_evento"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_evento"
            android:layout_gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_descricao_do_evento"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/descricao_do_evento"
            android:layout_gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_local_evento"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/local_do_evento"
            android:layout_gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_data_inicio_evento"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/data_do_inicio_do_evento"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_data_inicio_evento"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_my_events"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_hora_inicio_evento"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/hora_do_início_do_evento"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_hora_inicio_evento"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_clock"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_data_fim_evento"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/data_do_fim_do_evento"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_data_fim_evento"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_my_events"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_salvar_evento"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:text="@string/salvar"
        android:backgroundTint="@color/colorVerdeEscuro"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"/>
    </LinearLayout>

</ScrollView>