<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo_icon_foreground"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_email"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_senha"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:layout_gravity="center"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorVerdeEscuro"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_abrir_cadastro_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastre_se"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/cardview_light_background"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>