<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="5dp"
    android:elevation="@dimen/cardview_compat_inset_shadow"
    android:layout_width="330dp"
    android:layout_height="150dp"
    android:layout_gravity="center|top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nome_atividade_inscricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nome do evento"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_descricao_atividade_inscricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descri_o"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_data_atividade_inscricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:text="@string/data"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/tv_hora_atividade_inscricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:text="hora"
                android:textSize="13sp"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_valor_atividade_inscricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/valor"
            android:textSize="13sp"
            />


    </LinearLayout>

    <CheckBox
        android:id="@+id/chk_atividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"/>


</android.support.v7.widget.CardView>